--- a/css/FilmLinksParserPageBody.css
+++ b/css/FilmLinksParserPageBody.css
@@ -22,7 +22,7 @@ body {
     grid-column: 1 / 3;
 }
 
-.links_parsing_form > .filtring_indicator_div {
+.filtring_indicator_div {
     display: flex;
     flex-direction: column;
     border-radius: 5px;
@@ -32,7 +32,7 @@ body {
     padding: 15px;
 }
 
-.links_parsing_form > .filtring_indicator_div > .range_div {
+.filtring_indicator_div > .range_div {
     display: flex;
     flex-direction: row;
     gap: 10px;
